# Body_sim

./: .gitignore  EVIDENCE_BASE.md  My_bed.py  README.md  RESULTS_SECTION.md  SCIENTIFIC_ANALYSIS_AND_UPGRADES.md  SMPL_Testing.py  all_mattress_configs.py  all_mattress_pressure.py  all_mattress_pti.py  all_mattress_stress.py  bed_3d_visualization.py  bed_rotation_visualization.py  bed_variations_3d.py  evolve_optimal_mattress.py  evolved_pattern.py  fem_mattress_analysis.py  fem_tissue_model.py  generate_pattern_comparison.py  import numpy as np.py  literature_based_upgrades.py  multidynamic_mattress_optimization.py  optimal_mattress_3d.py  optimize_hybrid_mattress.py  parameter_comparison.py  pressure_ulcer_simulation.py  pressure_ulcer_simulation_advanced.py  pyproject.toml  quadriplegic_bed_comparison.py  requirements.txt  results_tables.csv  results_visualization.py  sim_results.py  test_compare.py  test_evolved.py  time_to_damage.py  tissue_damage_model.py  validation_dashboard.py
.claude/: settings.local.json
configs/: default_mattress.yaml
configs/patterns/: alternating_2phase.yaml  wave_pattern.yaml  zone_relief.yaml
examples/: basic_simulation.py  live_visualization.py
pmd_data/: supine_pressure_template.npy
scripts/: convert_smpl_models.py  download_smpl_models.py
src/body_sim/: __init__.py
src/body_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/body_sim/body/: __init__.py  mesh_processor.py  pose_library.py  smpl_wrapper.py
src/body_sim/core/: __init__.py  constants.py  types.py
(+19 files in other folders)
